# glue-factory

./: .gitignore  README.md  pyproject.toml
data/komainu_colmap/: README.md  cameras.txt  frames.txt  points3D.txt  rigs.txt
data/komainu_colmap/images/: project.ini
data/komainu_colmap/sparse/: project.ini
gluefactory/: train.py  trainer.py
gluefactory/configs/: komainu_train_depth.yaml  komainu_train_homography.yaml
gluefactory/configs/data/: komainu_colmap.yaml
gluefactory/datasets/: augmentations.py  base_dataset.py  composed.py  doppelgangers.py  image_pairs.py  image_pairs_npz.py  komainu_colmap.py  megadepth.py  posed_images.py
gluefactory/eval/: doppelgangers.py  eth3d.py  eth3d_reconstruction.py  eval_pipeline.py  hpatches.py  inspect.py  megadepth1500.py  megadepth8scenes.py  utils.py  zeb.py
gluefactory/geometry/: absolute_pose.py  depth.py  epipolar.py  gt_generation.py  reconstruction.py  transforms.py
gluefactory/models/: base_model.py  cache_loader.py  two_view_pipeline.py
gluefactory/models/extractors/: aliked.py  grid_extractor.py  mixed.py
gluefactory/models/matchers/: depth_matcher.py  lightglue.py
gluefactory/robust_estimators/absolute_pose/: poselib.py
gluefactory/robust_estimators/relative_pose/: poselib.py  procrustes.py
gluefactory/scripts/: export_megadepth.py
gluefactory/utils/: experiments.py  export.py  metrics.py  misc.py  preprocess.py  stdout_capturing.py  summary_writer.py  tensor.py  tools.py  types.py
gluefactory/visualization/: global_frame.py  tools.py  viz2d.py  viz3d.py
temp/: ONBOARDING.md  workdoc_nov11.md  workdoc_sparse_depth_implementation.md  会話.md
tests/: test_komainu_colmap.py
