[project]
name = "gluefactory"
description = "Training and evaluation of local feature extraction and matching"
version = "0.0"
authors = [
    { name = "Philipp Lindenberger" },
    { name = "Paul-Edouard Sarlin" },
    { name = "Rémi Pautrat" },
    { name = "Iago Suárez" },
]
readme = "README.md"
requires-python = ">=3.9.0"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "numpy>=1.23,<2",
    "opencv-python",
    "tqdm",
    "matplotlib",
    "scipy",
    "h5py",
    "omegaconf",
    "hydra-core",
    "tensorboard",
    "albumentations",
    "kornia",
    "seaborn",
    "joblib",
    "scikit-learn~=1.3.0",
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
    "cmake>=4.1.0",
    "ipython>=8.18.1",
]
urls = { Repository = "https://github.com/cvg/glue-factory" }

[project.optional-dependencies]
extra = [
    "cmake",
    "pycolmap",
    "poselib",
    "deeplsd @ git+https://github.com/cvg/DeepLSD.git",
    "pytlsd==0.0.5",
    "homography-est==0.0.0",
]
dev = ["black", "flake8", "isort", "parameterized"]

[tool.uv.sources]
pytlsd = { url = "https://github.com/yuki-inaho/pytlsd/releases/download/0.0.5/pytlsd-0.0.5-cp310-cp310-linux_x86_64.whl" }
homography-est = { url = "https://github.com/yuki-inaho/homography_est/releases/download/0.0.0/homography_est-0.0.0-cp310-cp310-linux_x86_64.whl" }

[tool.setuptools.packages.find]
include = ["gluefactory*"]

[tool.setuptools.package-data]
gluefactory = ["datasets/megadepth_scene_lists/*.txt", "configs/*.yaml"]

[tool.isort]
profile = "black"
extend_skip = ["gluefactory_nonfree/", "third_party/"]

[tool.uv]
dev-dependencies = ["black", "flake8", "isort", "parameterized"]
